--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.503.0",
     "match-sorter": "^8.0.0",
