--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^2.0.12",
     "@smastrom/react-rating": "^1.5.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
+    "react-parallax": "^3.5.2",
     "react-router-dom": "^7.5.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.6"
