--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^2.0.5",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.5.1",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.6"
   },
