--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.5.1",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.6"
