--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/lottie-player": "^2.0.12",
     "@smastrom/react-rating": "^1.5.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
