Login page complete using farebase

--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
-VITE_apiKey=AIzaSyAk6VKTjLEAN8ONOriy3HdH3opCR3qGjoA
-VITE_authDomain=lecelestebd.firebaseapp.com
-VITE_projectId=lecelestebd
-VITE_storageBucket=lecelestebd.firebasestorage.app
-VITE_messagingSenderId=937848764838
-VITE_appId=1:937848764838:web:6f82a8aa725bdb707f7767
+VITE_FIREBASE_API_KEY=AIzaSyAk6VKTjLEAN8ONOriy3HdH3opCR3qGjoA
+VITE_FIREBASE_AUTH_DOMAIN=lecelestebd.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=lecelestebd
+VITE_FIREBASE_STORAGE_BUCKET=lecelestebd.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=937848764838
+VITE_FIREBASE_APP_ID=1:937848764838:web:6f82a8aa725bdb707f7767
