--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.5.1",
