--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
