--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lottiefiles/lottie-player": "^2.0.12",
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
