--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID=lecelestebd
 VITE_FIREBASE_STORAGE_BUCKET=lecelestebd.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=937848764838
 VITE_FIREBASE_APP_ID=1:937848764838:web:6f82a8aa725bdb707f7767
+VITE_IMAGE_HOSTING_KEY=5a4609f2326ec0ded770f46b96210b7c
