--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.21.0",
+    "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
