--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@lottiefiles/lottie-player": "^2.0.12",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
