--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^7.5.1",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
+    "recharts": "^2.15.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.21.0",
     "sweetalert2-react-content": "^5.1.0",
